sfml/CSFML/include/SFML/Graphics/String.h


typedef struct sfString sfString;
CSFML_API sfString* sfString_Create();
CSFML_API void sfString_Destroy(sfString* String);
CSFML_API void sfString_SetX(sfString* String, float X);
CSFML_API void sfString_SetY(sfString* String, float Y);
CSFML_API void sfString_SetPosition(sfString* String, float Left, float Top);
CSFML_API void sfString_SetScaleX(sfString* String, float Scale);
CSFML_API void sfString_SetScaleY(sfString* String, float Scale);
CSFML_API void sfString_SetScale(sfString* String, float ScaleX, float ScaleY);
CSFML_API void sfString_SetRotation(sfString* String, float Rotation);
CSFML_API void sfString_SetCenter(sfString* String, float X, float Y);
CSFML_API void sfString_SetColor(sfString* String, sfColor Color);
CSFML_API void sfString_SetBlendMode(sfString* String, sfBlendMode Mode);
CSFML_API float sfString_GetX(sfString* String);
CSFML_API float sfString_GetY(sfString* String);
CSFML_API float sfString_GetScaleX(sfString* String);
CSFML_API float sfString_GetScaleY(sfString* String);
CSFML_API float sfString_GetRotation(sfString* String);
CSFML_API float sfString_GetCenterX(sfString* String);
CSFML_API float sfString_GetCenterY(sfString* String);
CSFML_API sfColor sfString_GetColor(sfString* String);
CSFML_API sfBlendMode sfString_GetBlendMode(sfString* String);
CSFML_API void sfString_Move(sfString* String, float OffsetX, float OffsetY);
CSFML_API void sfString_Scale(sfString* String, float FactorX, float FactorY);
CSFML_API void sfString_Rotate(sfString* String, float Angle);
CSFML_API void sfString_SetText(sfString* String, const char* Text);
CSFML_API void sfString_SetUnicodeText(sfString* String, const wchar_t* Text);
CSFML_API void sfString_SetFont(sfString* String, sfFont* Font);
CSFML_API void sfString_SetSize(sfString* String, float Size);
CSFML_API void sfString_SetStyle(sfString* String, unsigned long Style);
CSFML_API const wchar_t* sfString_GetUnicodeText(sfString* String);
CSFML_API const char* sfString_GetText(sfString* String);
CSFML_API sfFont* sfString_GetFont(sfString* String);
CSFML_API float sfString_GetSize(sfString* String);
CSFML_API unsigned long sfString_GetStyle(sfString* String);
CSFML_API sfFloatRect* sfString_GetRect(sfString* String);