libraries/sfml/CSFML/include/SFML/Graphics/Sprite.h


typedef struct sfSprite sfSprite;
CSFML_API sfSprite* sfSprite_Create();
CSFML_API void sfSprite_Destroy(sfSprite* Sprite);
CSFML_API void sfSprite_SetX(sfSprite* Sprite, float X);
CSFML_API void sfSprite_SetY(sfSprite* Sprite, float Y);
CSFML_API void sfSprite_SetPosition(sfSprite* Sprite, float X, float Y);
CSFML_API void sfSprite_SetScaleX(sfSprite* Sprite, float Scale);
CSFML_API void sfSprite_SetScaleY(sfSprite* Sprite, float Scale);
CSFML_API void sfSprite_SetScale(sfSprite* Sprite, float ScaleX, float ScaleY);
CSFML_API void sfSprite_SetRotation(sfSprite* Sprite, float Rotation);
CSFML_API void sfSprite_SetCenter(sfSprite* Sprite, float X, float Y);
CSFML_API void sfSprite_SetColor(sfSprite* Sprite, sfColor Color);
CSFML_API void sfSprite_SetBlendMode(sfSprite* Sprite, sfBlendMode Mode);
CSFML_API float sfSprite_GetX(sfSprite* Sprite);
CSFML_API float sfSprite_GetY(sfSprite* Sprite);
CSFML_API float sfSprite_GetScaleX(sfSprite* Sprite);
CSFML_API float sfSprite_GetScaleY(sfSprite* Sprite);
CSFML_API float sfSprite_GetRotation(sfSprite* Sprite);
CSFML_API float sfSprite_GetCenterX(sfSprite* Sprite);
CSFML_API float sfSprite_GetCenterY(sfSprite* Sprite);
CSFML_API sfColor sfSprite_GetColor(sfSprite* Sprite);
CSFML_API sfBlendMode sfSprite_GetBlendMode(sfSprite* Sprite);
CSFML_API void sfSprite_Move(sfSprite* Sprite, float OffsetX, float OffsetY);
CSFML_API void sfSprite_Scale(sfSprite* Sprite, float FactorX, float FactorY);
CSFML_API void sfSprite_Rotate(sfSprite* Sprite, float Angle);
CSFML_API void sfSprite_SetImage(sfSprite* Sprite, sfImage* Image);
CSFML_API void sfSprite_SetSubRect(sfSprite* Sprite, const sfIntRect* SubRect);
CSFML_API void sfSprite_Resize(sfSprite* Sprite, float Width, float Height);
CSFML_API void sfSprite_FlipX(sfSprite* Sprite, sfBool Flipped);
CSFML_API void sfSprite_FlipY(sfSprite* Sprite, sfBool Flipped);
CSFML_API sfImage* sfSprite_GetImage(sfSprite* Sprite);
CSFML_API sfIntRect* sfSprite_GetSubRect(sfSprite* Sprite);
CSFML_API float sfSprite_GetWidth(sfSprite* Sprite);
CSFML_API float sfSprite_GetHeight(sfSprite* Sprite);
CSFML_API sfColor sfSprite_GetPixel(sfSprite* Sprite, unsigned int X, unsigned int Y);