trunk/sfml/CSFML/include/SFML/Graphics/Shape.h


typedef struct sfShape sfShape;
CSFML_API sfShape* sfShape_Create();
CSFML_API sfShape* sfShape_CreateLine(float P1X, float P1Y, float P2X, float P2Y, float Thickness, sfColor Col, float Outline, sfColor OutlineCol);
CSFML_API sfShape* sfShape_CreateRectangle(float P1X, float P1Y, float P2X, float P2Y, sfColor Col, float Outline, sfColor OutlineCol);
CSFML_API sfShape* sfShape_CreateCircle(float X, float Y, float Radius, sfColor Col, float Outline, sfColor OutlineCol);
CSFML_API void sfShape_Destroy(sfShape* Shape);
CSFML_API void sfShape_SetX(sfShape* Shape, float X);
CSFML_API void sfShape_SetY(sfShape* Shape, float Y);
CSFML_API void sfShape_SetPosition(sfShape* Shape, float X, float Y);
CSFML_API void sfShape_SetScaleX(sfShape* Shape, float Scale);
CSFML_API void sfShape_SetScaleY(sfShape* Shape, float Scale);
CSFML_API void sfShape_SetScale(sfShape* Shape, float ScaleX, float ScaleY);
CSFML_API void sfShape_SetRotation(sfShape* Shape, float Rotation);
CSFML_API void sfShape_SetCenter(sfShape* Shape, float X, float Y);
CSFML_API void sfShape_SetColor(sfShape* Shape, sfColor Color);
CSFML_API void sfShape_SetBlendMode(sfShape* Shape, sfBlendMode Mode);
CSFML_API float sfShape_GetX(sfShape* Shape);
CSFML_API float sfShape_GetY(sfShape* Shape);
CSFML_API float sfShape_GetScaleX(sfShape* Shape);
CSFML_API float sfShape_GetScaleY(sfShape* Shape);
CSFML_API float sfShape_GetRotation(sfShape* Shape);
CSFML_API float sfShape_GetCenterX(sfShape* Shape);
CSFML_API float sfShape_GetCenterY(sfShape* Shape);
CSFML_API sfColor sfShape_GetColor(sfShape* Shape);
CSFML_API sfBlendMode sfShape_GetBlendMode(sfShape* Shape);
CSFML_API void sfShape_Move(sfShape* Shape, float OffsetX, float OffsetY);
CSFML_API void sfShape_Scale(sfShape* Shape, float FactorX, float FactorY);
CSFML_API void sfShape_Rotate(sfShape* Shape, float Angle);
CSFML_API void sfShape_AddPoint(sfShape* Shape, float X, float Y, sfColor Col, sfColor OutlineCol);
CSFML_API void sfShape_EnableFill(sfShape* Shape, sfBool Enable);
CSFML_API void sfShape_EnableOutline(sfShape* Shape, sfBool Enable);
CSFML_API void sfShape_SetOutlineWidth(sfShape* Shape, float Width);
CSFML_API unsigned int sfShape_GetNbPoints(sfShape* Shape);
CSFML_API void sfShape_GetPoint(sfShape* Shape, unsigned int Index, float* X, float* Y);
CSFML_API float sfShape_GetOutlineWidth(sfShape* Shape);