trunk/sfml/DSFML/import/dsfml/graphics/external.d


        pf_sfView_Create sfView_Create;
        pf_sfView_CreateFromRect sfView_CreateFromRect;
        pf_sfView_Destroy sfView_Destroy;
        pf_sfView_SetCenter sfView_SetCenter;
        pf_sfView_SetHalfSize sfView_SetHalfSize;
        pf_sfView_SetFromRect sfView_SetFromRect;
        pf_sfView_GetCenterX sfView_GetCenterX;
        pf_sfView_GetCenterY sfView_GetCenterY;
        pf_sfView_GetHalfSizeX sfView_GetHalfSizeX;
        pf_sfView_GetHalfSizeY sfView_GetHalfSizeY;
        pf_sfView_GetRect sfView_GetRect;
        pf_sfView_Move sfView_Move;
        pf_sfView_Zoom sfView_Zoom;
    }
}
else
{
    extern(C)
    {
        //font.d
        struct sfFont {};
        
        sfFont* sfFont_Create();
        sfFont* sfFont_CreateFromFile(char* Filename, uint CharSize, wchar* Charset);
        sfFont* sfFont_CreateFromMemory(byte* data, size_t sizeInBytes, uint CharSize, wchar* Charset);
        void sfFont_Destroy(sfFont*);
        sfFont* sfFont_GetDefaultFont();

        //sprite.d
        struct sfSprite {};
        
        sfSprite* sfSprite_Create();
        void sfSprite_Destroy(sfSprite*);
        void sfSprite_SetX(sfSprite*, float);
        void sfSprite_SetY(sfSprite*, float);
        void sfSprite_SetPosition(sfSprite*, float, float);
        void sfSprite_SetScaleX(sfSprite*, float);
        void sfSprite_SetScaleY(sfSprite*, float);
        void sfSprite_SetScale(sfSprite*, float, float);
        void sfSprite_SetRotation(sfSprite*, float);
        void sfSprite_SetCenter(sfSprite*, float, float);
        void sfSprite_SetColor(sfSprite*, Color);
        void sfSprite_SetBlendMode(sfSprite*, BlendMode);
        float sfSprite_GetX(sfSprite*);
        float sfSprite_GetY(sfSprite*);
        float sfSprite_GetScaleX(sfSprite*);
        float sfSprite_GetScaleY(sfSprite*);
        float sfSprite_GetRotation(sfSprite*);
        float sfSprite_GetCenterX(sfSprite*);
        float sfSprite_GetCenterY(sfSprite*);
        Color sfSprite_GetColor(sfSprite*);
        BlendMode sfSprite_GetBlendMode(sfSprite*);
        void sfSprite_Move(sfSprite*, float, float);
        void sfSprite_Scale(sfSprite*, float, float);
        void sfSprite_Rotate(sfSprite*, float);
        void sfSprite_SetImage(sfSprite*, sfImage*);
        void sfSprite_SetSubRect(sfSprite*, sfIntRect*);
        void sfSprite_Resize(sfSprite*, float, float);
        void sfSprite_FlipX(sfSprite*, int);
        void sfSprite_FlipY(sfSprite*, int);
        sfImage* sfSprite_GetImage(sfSprite*);
        sfIntRect* sfSprite_GetSubRect(sfSprite*);
        float sfSprite_GetWidth(sfSprite*);
        float sfSprite_GetHeight(sfSprite*);
        Color sfSprite_GetPixel(sfSprite*, uint, uint);
    
        //string.d
        struct sfString {};
        
        sfString* sfString_Create();
        void sfString_Destroy(sfString*);
        void sfString_SetX(sfString*, float);
        void sfString_SetY(sfString*, float);
        void sfString_SetPosition(sfString*, float, float);
        void sfString_SetScaleX(sfString*, float);
        void sfString_SetScaleY(sfString*, float);
        void sfString_SetScale(sfString*, float, float);
        void sfString_SetRotation(sfString*, float);
        void sfString_SetCenter(sfString*, float, float);
        void sfString_SetColor(sfString*, Color);
        void sfString_SetBlendMode(sfString*, BlendMode);
        float sfString_GetX(sfString*);
        float sfString_GetY(sfString*);
        float sfString_GetScaleX(sfString*);
        float sfString_GetScaleY(sfString*);
        float sfString_GetRotation(sfString*);
        float sfString_GetCenterX(sfString*);
        float sfString_GetCenterY(sfString*);
        Color sfString_GetColor(sfString*);
        BlendMode sfString_GetBlendMode(sfString*);
        void sfString_Move(sfString*, float, float);
        void sfString_Scale(sfString*, float, float);
        void sfString_Rotate(sfString*, float);
        void sfString_SetText(sfString*, char*);
        void sfString_SetUnicodeText(sfString*, wchar*);
        void sfString_SetFont(sfString*, sfFont*);
        void sfString_SetSize(sfString*, float);
        void sfString_SetStyle(sfString*, TextStyle);
        wchar* sfString_GetUnicodeText(sfString*);
        char* sfString_GetText(sfString*);
        sfFont* sfString_GetFont(sfString*);
        float sfString_GetSize(sfString*);
        TextStyle sfString_GetStyle(sfString*);
        sfFloatRect sfString_GetRect(sfString*);
        
        //shape.d
        struct sfShape {};
        
        sfShape* sfShape_Create();
        sfShape* sfShape_CreateLine(float P1X, float P1Y, float P2X, float P2Y, float Thickness, Color Col, float Outline, Color OutlineCol);
        sfShape* sfShape_CreateRectangle(float P1X, float P1Y, float P2X, float P2Y, Color Col, float Outline, Color OutlineCol);
        sfShape* sfShape_CreateCircle(float X, float Y, float Radius, Color Col, float Outline, Color OutlineCol);
        void sfShape_Destroy(sfShape* Shape);
        void sfShape_SetX(sfShape* Shape, float X);
        void sfShape_SetY(sfShape* Shape, float Y);
        void sfShape_SetPosition(sfShape* Shape, float X, float Y);
        void sfShape_SetScaleX(sfShape* Shape, float Scale);
        void sfShape_SetScaleY(sfShape* Shape, float Scale);
        void sfShape_SetScale(sfShape* Shape, float ScaleX, float ScaleY);
        void sfShape_SetRotation(sfShape* Shape, float Rotation);
        void sfShape_SetCenter(sfShape* Shape, float X, float Y);
        void sfShape_SetColor(sfShape* Shape, Color Color);
        void sfShape_SetBlendMode(sfShape* Shape, BlendMode Mode);
        float sfShape_GetX(sfShape* Shape);
        float sfShape_GetY(sfShape* Shape);
        float sfShape_GetScaleX(sfShape* Shape);
        float sfShape_GetScaleY(sfShape* Shape);
        float sfShape_GetRotation(sfShape* Shape);
        float sfShape_GetCenterX(sfShape* Shape);
        float sfShape_GetCenterY(sfShape* Shape);
        Color sfShape_GetColor(sfShape* Shape);
        BlendMode sfShape_GetBlendMode(sfShape* Shape);
        void sfShape_Move(sfShape* Shape, float OffsetX, float OffsetY);
        void sfShape_Scale(sfShape* Shape, float FactorX, float FactorY);
        void sfShape_Rotate(sfShape* Shape, float Angle);
        void sfShape_AddPoint(sfShape* Shape, float X, float Y, Color Col, Color OutlineCol);
        void sfShape_EnableFill(sfShape* Shape, bool Enable);
        void sfShape_EnableOutline(sfShape* Shape, bool Enable);
        void sfShape_SetOutlineWidth(sfShape* Shape, float Width);
        uint sfShape_GetNbPoints(sfShape* Shape);
        void sfShape_GetPoint(sfShape* Shape, uint Index, float* X, float* Y);
        float sfShape_GetOutlineWidth(sfShape* Shape);
                
        //renderwindow.d
        struct sfRenderWindow {};
        
        sfRenderWindow* sfRenderWindow_Create(VideoMode, char*, ulong, WindowSettings);
        sfRenderWindow* sfRenderWindow_CreateFromHandle(WindowHandle, WindowSettings);
        void sfRenderWindow_Destroy(sfRenderWindow*);
        sfInput* sfRenderWindow_GetInput(sfRenderWindow*);
        void sfRenderWindow_DrawPostFX(sfRenderWindow*, sfPostFX*);
        void sfRenderWindow_DrawSprite(sfRenderWindow*, sfSprite*);
        void sfRenderWindow_DrawString(sfRenderWindow*, sfString*);
        void sfRenderWindow_DrawShape(sfRenderWindow*, sfShape*);
        sfImage* sfRenderWindow_Capture(sfRenderWindow*);
        void sfRenderWindow_SetBackgroundColor(sfRenderWindow*, Color);
        void sfRenderWindow_SetView(sfRenderWindow*, sfView*);
        sfView* sfRenderWindow_GetView(sfRenderWindow*);
        sfView* sfRenderWindow_GetDefaultView(sfRenderWindow*);
        void sfRenderWindow_ConvertCoords(sfRenderWindow*, uint, uint, float*, float*, sfView*);
        void sfRenderWindow_PreserveOpenGLStates(sfRenderWindow*, bool);
    
        //postFX.d
        struct sfPostFX {};
        
        sfPostFX* sfPostFX_CreateFromFile(char*);
        sfPostFX* sfPostFX_CreateFromMemory(char*);
        void sfPostFX_Destroy(sfPostFX*);
        void sfPostFX_SetParameter1(sfPostFX*, char*, float);
        void sfPostFX_SetParameter2(sfPostFX*, char*, float, float);
        void sfPostFX_SetParameter3(sfPostFX*, char*, float, float, float);
        void sfPostFX_SetParameter4(sfPostFX*, char*, float, float, float, float);
        void sfPostFX_SetTexture(sfPostFX*, char*, sfImage*);
        bool sfPostFX_CanUsePostFX();
        
        //image.d
        struct sfImage {};
        
        sfImage* sfImage_Create();
        sfImage* sfImage_CreateFromColor(uint, uint, Color);
        sfImage* sfImage_CreateFromPixels(uint, uint, ubyte*);
        sfImage* sfImage_CreateFromFile(char*);
        sfImage* sfImage_CreateFromMemory(byte* ,size_t);
        void sfImage_Destroy(sfImage*);
        bool sfImage_SaveToFile(sfImage*, char*);
        void sfImage_CreateMaskFromColor(sfImage*, Color, ubyte);
        bool sfImage_Resize(sfImage*, uint, uint, Color);
        void sfImage_SetPixel(sfImage*, uint, uint, Color);
        Color sfImage_GetPixel(sfImage*, uint, uint);
        ubyte* sfImage_GetPixelsPtr(sfImage*);
        void sfImage_Bind(sfImage*);
        void sfImage_SetSmooth(sfImage*, int);
        uint sfImage_GetWidth(sfImage*);
        uint sfImage_GetHeight(sfImage*);
        bool sfImage_IsSmooth(sfImage*);
        
        //view.d
        struct sfView{};
        
        sfView* sfView_Create();
        sfView* sfView_CreateFromRect(sfFloatRect);
        void sfView_Destroy(sfView*);
        void sfView_SetCenter(sfView*, float, float);
        void sfView_SetHalfSize(sfView*, float, float);
        void sfView_SetFromRect(sfView*, sfFloatRect ViewRect);
        float sfView_GetCenterX(sfView*);
        float sfView_GetCenterY(sfView*);
        float sfView_GetHalfSizeX(sfView*);
        float sfView_GetHalfSizeY(sfView*);
        sfFloatRect sfView_GetRect(sfView*);
        void sfView_Move(sfView*, float, float);
        void sfView_Zoom(sfView*, float);
    }
}
